# atlassian-servicenow-mcp-server

./: .env.sample  .gitignore  Dockerfile  README.md  client.py  jira_client.py  main.py  pyproject.toml  web.py
clients/: confluence_client.py  servicenow_client.py
static/: index.html
tools/: add_comment.py  create_issue.py  get_issue.py  list_projects.py  search_issues.py  transition_issue.py  update_issue.py
tools/confluence/: create_confluence_page.py  get_confluence_page.py  list_confluence_spaces.py  search_confluence.py
tools/jira/: add_comment.py  create_issue.py  get_issue.py  list_projects.py  search_issues.py  transition_issue.py  update_issue.py
tools/servicenow/: create_incident.py  get_incident.py  search_incidents.py
